--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advanced Javascript</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <script>
       function testSubmit(event) {
         // get the form data
@@ -17,7 +24,7 @@
         result.innerHTML = "<p>Username: " + username + " </p>";
         result.style.color = "blue";
         result.style.backgroundColor = "yellow";
-        result.style.fontSize = "100px";
+        result.style.fontSize = "24px";
 
         // prevent the default form submission/page reload
         event.preventDefault();
@@ -25,19 +32,34 @@
     </script>
   </head>
   <body>
-    <h1>Advanced Javascript</h1>
-    <!-- event keyword is the submission object -->
-    <form name="signInForm" onsubmit="testSubmit(event)">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" />
+    <main class="container">
+      <h1>Advanced Javascript</h1>
+      <!-- event keyword is the submission object -->
+      <form name="signInForm" onsubmit="testSubmit(event)">
+        <label class="form-label" for="username">Username</label>
+        <input class="form-control" type="text" id="username" name="username" />
 
-      <br />
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" />
-      <br />
-      <button type="submit">Submit</button>
-    </form>
+        <br />
+        <label class="form-label" for="password">Password</label>
+        <input
+          class="form-control"
+          type="password"
+          id="password"
+          name="password"
+        />
+        <br />
+        <button class="btn btn-primary" type="submit">Submit</button>
+      </form>
 
-    <div id="result"></div>
+      <div class="card mt-2">
+        <div id="result" class="card-body">Result will show here.</div>
+      </div>
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
