--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Add jQuery script first so it is available for use on other scripts -->
     <script
@@ -44,6 +45,11 @@
         <div id="result" class="card-body">Result will show here.</div>
       </div>
     </main>
+
+    <div id="panel_1"></div>
+    <div id="panel_2"></div>
+    <div id="panel_3"></div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
